18_02_2025 MODIFICACION BUTTONS DE CARGA INVENTARIO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-anular-inventario/button-anular-inventario.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-anular-inventario/button-anular-inventario.component.css
@@ -1,4 +1,4 @@
-button {
+/* button {
   width: 100%;
   background-color: rgb(245, 245, 245);
   border-radius: 10px;
@@ -6,4 +6,4 @@ button {
 
 button mat-icon {
   color: #E10000;
-}
+} */
