--- a/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-anular-inventario/button-anular-inventario.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-anular-inventario/button-anular-inventario.component.html
@@ -1,8 +1,18 @@
-<button
+<div class="px-6 py-3">
+  <button
+  (click)="ObtenerDetatosInventarios()"
+  class="btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
+    type="button"
+  >
+    <img src="../../../../../../../assets/svg/icon_eliminar.svg" alt="" />
+  </button>
+</div>
+
+<!-- <button
   (click)="ObtenerDetatosInventarios()"
   mat-fab
   extended
 >
   <mat-icon>delete</mat-icon>
   Anular
-</button>
+</button> -->
