--- a/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-asignar/button-asignar.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-asignar/button-asignar.component.html
@@ -1,4 +1,19 @@
-<button
+<div class="px-6 py-3">
+  <button
+  (click)="ObtenerDetatosInventarios()"
+  class="btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
+    type="button"
+    data-bs-toggle="modal"
+    data-bs-target="#staticBackdrop"
+    aria-controls="hs-detalles-inventario"
+  >
+    <img src="../../../../../../../assets/svg/icon-users.svg" alt="" />
+  </button>
+</div>
+
+
+
+<!-- <button
   data-bs-toggle="offcanvas"
   data-bs-target="#newProducts"
   aria-controls="newProducts"
@@ -9,5 +24,4 @@
   (click)="ObtenerDetatosInventarios()"
 >
   <mat-icon>person</mat-icon>
-  Asignar
-</button>
+</button> -->
