--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -102,25 +102,14 @@
     </td>
   </ng-container>
 
+   <!-- =================================================================================== -->
+  <!-- Asignar -->
   <!-- =================================================================================== -->
-  <!-- Asignación -->
-  <!-- =================================================================================== -->
-  <ng-container matColumnDef="asignacion">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Operaciones</th>
+  <ng-container matColumnDef="asignar">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Asignar</th>
     <td mat-cell *matCellDef="let row">
-      <mat-menu #menu="matMenu">
-        <div class="container-matmenu">
-          <h3>Opciones</h3>
-          <hr />
-          @if (row.estado == '0') { Inventario anulado } @if (row.estado == '2')
+      @if (row.estado == '0') { Inventario anulado } @if (row.estado == '2')
           { Inventario culminado } @if (row.estado == '1') {
-          <!-- <button-producto
-            [idcarga]="row.idcarga"
-            [rucempresa]="row.rucempresa"
-            (obtenerDetalle)="
-              ObtenerDatosAddProductos($event.rucempresa, $event.idcarga)
-            "
-          /> -->
           <button-asignar
             [idcarga]="row.idcarga"
             [rucempresa]="row.rucempresa"
@@ -128,7 +117,19 @@
               ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)
             "
           />
-          <button-anular-inventario
+          }
+    </td>
+  </ng-container>
+
+   <!-- =================================================================================== -->
+  <!-- Anular -->
+  <!-- =================================================================================== -->
+  <ng-container matColumnDef="anular">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Anular</th>
+    <td mat-cell *matCellDef="let row">
+      @if (row.estado == '0') { Inventario anulado } @if (row.estado == '2')
+          { Inventario culminado } @if (row.estado == '1') {
+            <button-anular-inventario
             [idcarga]="row.idcarga"
             [rucempresa]="row.rucempresa"
             (obtenerDetalle)="
@@ -137,12 +138,6 @@
             [datosInventario]="datosInventario"
           />
           }
-        </div>
-      </mat-menu>
-
-      <button mat-button [matMenuTriggerFor]="menu">
-        <img src="../../../../../../assets/svg/icon-options.svg" alt="" />
-      </button>
     </td>
   </ng-container>
 
