--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -108,7 +108,7 @@
   <ng-container matColumnDef="asignar">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Asignar</th>
     <td mat-cell *matCellDef="let row">
-      @if (row.estado == '0') { Inventario anulado } @if (row.estado == '2')
+      @if (row.estado == '0') { - } @if (row.estado == '2')
           { Inventario culminado } @if (row.estado == '1') {
           <button-asignar
             [idcarga]="row.idcarga"
@@ -127,8 +127,8 @@
   <ng-container matColumnDef="anular">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Anular</th>
     <td mat-cell *matCellDef="let row">
-      @if (row.estado == '0') { Inventario anulado } @if (row.estado == '2')
-          { Inventario culminado } @if (row.estado == '1') {
+      @if (row.estado == '0') { - } @if (row.estado == '2')
+          { - } @if (row.estado == '1') {
             <button-anular-inventario
             [idcarga]="row.idcarga"
             [rucempresa]="row.rucempresa"
