--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -56,7 +56,7 @@
   </ng-container>
 
   <!-- =================================================================================== -->
-  <!-- Usuario -->
+  <!-- Usuario creación-->
   <!-- =================================================================================== -->
   <ng-container matColumnDef="usuariocreacion">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuario creador</th>
@@ -65,6 +65,21 @@
         <mat-icon>person</mat-icon>
         <span class="text-sm text-gray-600 dark:text-neutral-400">
           {{ row.usuariocreacion.toUpperCase() }}
+        </span>
+      </button>
+    </td>
+  </ng-container>
+
+  <!-- =================================================================================== -->
+  <!-- Usuario asignado-->
+  <!-- =================================================================================== -->
+  <ng-container matColumnDef="usuarioasignado">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuario asignado</th>
+    <td mat-cell *matCellDef="let row">
+      <button class="usuariocreador" class="px-6 py-3 flex gap-2 align-center">
+        <mat-icon>person</mat-icon>
+        <span class="text-sm text-gray-600 dark:text-neutral-400">
+          {{ row.UsuarioAsignado.toUpperCase() || "-" }}
         </span>
       </button>
     </td>
