17_02_2025 CORRECINO CAMPOS CARGA INVENTARIO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-asignar/button-asignar.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-asignar/button-asignar.component.html
@@ -7,7 +7,7 @@
     data-bs-target="#staticBackdrop"
     aria-controls="hs-detalles-inventario"
   >
-    <img src="../../../../../../../assets/svg/icon-users.svg" alt="" />
+  <mat-icon>person</mat-icon>
   </button>
 </div>
 
