--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.css
@@ -63,3 +63,14 @@ table th {
   margin-bottom: .5rem;
 }
 
+.buttons-options {
+  width: 7rem !important;
+  min-width: 7rem !important;
+  max-width: 7rem !important;
+  text-align: center;
+}
+
+.buttons-options td {
+  display: grid;
+  place-content: center;
+}
