--- a/src/app/Ui/Shared/feactures/cargarInventario/table-carga/td-table-btn-detalle/td-table-btn-detalle.component.html
+++ b/src/app/Ui/Shared/feactures/cargarInventario/table-carga/td-table-btn-detalle/td-table-btn-detalle.component.html
@@ -9,6 +9,6 @@
     data-bs-target="#hs-detalles-inventario"
     aria-controls="hs-detalles-inventario"
   >
-    <img src="../../../../../../assets/svg/icon_ver.svg" alt="" />
+  <mat-icon>visibility</mat-icon>
   </button>
 </div>
