--- a/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-anular-inventario/button-anular-inventario.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-anular-inventario/button-anular-inventario.component.html
@@ -4,7 +4,7 @@
   class="btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
     type="button"
   >
-    <img src="../../../../../../../assets/svg/icon_eliminar.svg" alt="" />
+  <mat-icon>delete</mat-icon>
   </button>
 </div>
 
