--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -55,20 +55,6 @@
     </td>
   </ng-container>
 
-  <!-- =================================================================================== -->
-  <!-- Usuario creación-->
-  <!-- =================================================================================== -->
-  <ng-container matColumnDef="usuariocreacion">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuario creador</th>
-    <td mat-cell *matCellDef="let row">
-      <button class="usuariocreador" class="px-6 py-3 flex gap-2 align-center">
-        <mat-icon>person</mat-icon>
-        <span class="text-sm text-gray-600 dark:text-neutral-400">
-          {{ row.usuariocreacion.toUpperCase() }}
-        </span>
-      </button>
-    </td>
-  </ng-container>
 
   <!-- =================================================================================== -->
   <!-- Usuario asignado-->
@@ -89,8 +75,8 @@
   <!-- Estado -->
   <!-- =================================================================================== -->
   <ng-container matColumnDef="estado">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
-    <td mat-cell *matCellDef="let row">
+    <th  mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
+    <td  mat-cell *matCellDef="let row">
       @if (row.estado == "1") {
       <td-estado-1 />
       } @if (row.estado == "2") {
@@ -104,9 +90,9 @@
   <!-- =================================================================================== -->
   <!-- Detalle -->
   <!-- =================================================================================== -->
-  <ng-container matColumnDef="detalle">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Detalle</th>
-    <td mat-cell *matCellDef="let row">
+  <ng-container  matColumnDef="detalle">
+    <th  mat-header-cell *matHeaderCellDef mat-sort-header>Detalle</th>
+    <td  mat-cell *matCellDef="let row">
       <td-table-btn-detalle
         [idcarga]="row.idcarga"
         [rucempresa]="row.rucempresa"
@@ -120,9 +106,9 @@
    <!-- =================================================================================== -->
   <!-- Asignar -->
   <!-- =================================================================================== -->
-  <ng-container matColumnDef="asignar">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Asignar</th>
-    <td mat-cell *matCellDef="let row">
+  <ng-container  matColumnDef="asignar">
+    <th  mat-header-cell *matHeaderCellDef mat-sort-header>Asignar</th>
+    <td  mat-cell *matCellDef="let row">
       @if (row.estado == '0') { - } @if (row.estado == '2')
           { Inventario culminado } @if (row.estado == '1') {
           <button-asignar
@@ -139,9 +125,9 @@
    <!-- =================================================================================== -->
   <!-- Anular -->
   <!-- =================================================================================== -->
-  <ng-container matColumnDef="anular">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Anular</th>
-    <td mat-cell *matCellDef="let row">
+  <ng-container class="buttons" matColumnDef="anular">
+    <th  mat-header-cell *matHeaderCellDef mat-sort-header>Anular</th>
+    <td  mat-cell *matCellDef="let row">
       @if (row.estado == '0') { - } @if (row.estado == '2')
           { - } @if (row.estado == '1') {
             <button-anular-inventario
