18_02_2025 ARREGLO ISTA DE USUARIOS ASIGNAR EN CARGA INVENTARIO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -65,7 +65,7 @@
       <button class="usuariocreador" class="px-6 py-3 flex gap-2 align-center">
         <mat-icon>person</mat-icon>
         <span class="text-sm text-gray-600 dark:text-neutral-400">
-          {{ row.UsuarioAsignado.toUpperCase() || "-" }}
+          {{ row.UsuarioAsignado || "-" }}
         </span>
       </button>
     </td>
@@ -110,7 +110,7 @@
     <th  mat-header-cell *matHeaderCellDef mat-sort-header>Asignar</th>
     <td  mat-cell *matCellDef="let row">
       @if (row.estado == '0') { - } @if (row.estado == '2')
-          { Inventario culminado } @if (row.estado == '1') {
+          { - } @if (row.estado == '1') {
           <button-asignar
             [idcarga]="row.idcarga"
             [rucempresa]="row.rucempresa"
