18_02_2025 ARREGLO DE REGISTRO DE CODIGO DE PRODUCTO EN CARGA INVENTARIO

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
@@ -260,7 +260,7 @@
               <div class="px-3 py-2">
                 <span
                   class="font-semibold text-xs text-gray-800 "
-                  >{{item.Codigoproducto}}</span
+                  >{{item.codigoproducto}}</span
                 >
               </div>
             </td>
