--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-portada/design-page-portada.component.css
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-portada/design-page-portada.component.css
@@ -1,6 +1,6 @@
 .container-principal {
   height: auto;
-
+  width: 100%;
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -12,8 +12,10 @@
 
 .container-final,
 .container-portada {
-  width: 70.1875rem;
-  height: 49.625rem;
+  /* width: 70.1875rem;
+  height: 49.625rem; */
+  width: 100%;
+  height: calc(100vh - 8rem);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -60,11 +62,11 @@
   box-sizing: border-box;
 }
 
-.container-borde .borde-design {
+/* .container-borde .borde-design {
   width: 100%;
   height: 100%;
   border: 10px solid #20477E;
-}
+} */
 
 .container-imagen img {
   width: 100%;
@@ -129,7 +131,9 @@
 }
 
 .container-datos-page {
-  width:  70.1875rem;
+  /* width:  70.1875rem;
+  height: 49.625rem; */
+  width:  100%;
   height: 49.625rem;
   display: flex;
   flex-direction: column;
