--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
@@ -2,152 +2,31 @@
   width: 100rem;
 }
 
-
-.container-principal {
-  height: auto;
-  width: 100rem;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  gap: 2rem;
-}
-
-.container-final,
-.container-portada {
-  width: 49.625rem;
-  height: 70.1875rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: white;
-  box-shadow: 10px 10px 15px rgba(197, 197, 197, 0.5);
-  position: relative;
-  flex-shrink: 0;
-}
-
-
-.container-header-pdf {
-  width: 100%;
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
-
-.container-header-pdf button {
-  color: #20477E;
-  border: 2px solid #20477E;
-  border-radius: 5px;
-  padding: .4rem 1rem;
-  display: flex;
-  gap: 0.8rem;
-}
-
-.container-header-pdf button:hover {
-  color:  rgba(0, 209, 174, 1);
-  border: 2px solid rgba(0, 209, 174, 1);
-  transition: all .2s ease-in;
-}
-
-.container-imagen {
-  height: 400px;
-}
-
-.container-final .container-imagen {
-  height: 100%;
-}
-
-.container-borde {
-  width: 100%;
-  height: 100%;
-  padding: 2rem;
-  position: absolute;
-  z-index: 1;
-  box-sizing: border-box;
-}
-
-.container-borde .borde-design {
-  width: 100%;
-  height: 100%;
-  border: 10px solid #20477E;
-}
-
-.container-imagen img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: grayscale(1);
-}
-
-.container-datos {
-  height: 100%;
-  padding: 0 1rem;
-  box-sizing: border-box;
-}
-
-.container-apartado-datos {
-  position: absolute;
-  width: 20rem;
-  height: 100%;
-  z-index: 2;
-  top: 0;
-  left: 5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(to bottom, rgba(0, 209, 174, .8), rgba(32, 71, 126, .8) );
-}
-
-.container-title-principal {
-  display: flex;
-  flex-direction: column;
-  border-left: 8px solid white;
-  padding: 0 1rem;
-}
-
-.container-title-principal h1 {
-  color: white;
-  font-size: 2.5rem;
-  font-weight: bold;
-}
-
-.container-title-principal h4 {
-  color: white;
-}
-
-.container-title-principal h3 {
-  color: white;
-  font-size: 5.5rem;
-  font-weight: bold;
-}
-
-.container-apartado-datos-adicionales {
-  color: white;
-  margin-top: 2rem;
-}
-
-.container-apartado-datos-adicionales h4:nth-child(1) {
-  font-weight: bold;
-  font-size: .8rem;
-}
-
-
 .container-datos {
   display: flex;
-  position: relative;
-  width: 100rem;
+  height: calc(100vh - 8rem);
 }
 
-.container-datos filtros-checkbox-tabla {
+.container-datos .apartado-filtros {
+  width: 16rem;
   height: 100%;
-  position: absolute;
-  z-index: 1;
-  left: 0;
+  overflow-y: auto;
 }
 
-.container-datos design-page-tabla-datos {
-  margin-left: 10rem;
+.container-datos .apartado-productos {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; /* Evita que afecte el scroll de los filtros */
+}
+
+.container-datos .apartado-productos design-page-tabla-datos {
+  flex-grow: 1;
+  overflow: auto; /* Scroll solo en la tabla */
+}
+
+
+.apartado-stats {
+  display: flex;
+  flex-direction: column;
 }
