--- a/src/app/Ui/Modules/reportes/components/filtros-checkbox-tabla/filtros-checkbox-tabla.component.html
+++ b/src/app/Ui/Modules/reportes/components/filtros-checkbox-tabla/filtros-checkbox-tabla.component.html
@@ -1,5 +1,7 @@
-<h1 class="flex flex-col">
+<h1 class="w-full flex flex-col">
   <span>FILTROS COLUMNA</span>
+</h1>
+<ul class="w-full p-2 flex flex-col">
   <li  class="inline-flex items-center gap-x-2 py-2 px-4 text-sm font-medium bg-white border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg dark:bg-neutral-800 dark:border-neutral-700 dark:text-white">
     <div class="relative flex items-start w-full">
       <div class="flex items-center h-5">
@@ -17,8 +19,6 @@
       </label>
     </div>
   </li>
-</h1>
-<ul class="w-[12rem] p-2 flex flex-col">
   @for ( columna of columnas; track $index) {
     <li  class="inline-flex items-center gap-x-2 py-2 px-4 text-sm font-medium bg-white border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg dark:bg-neutral-800 dark:border-neutral-700 dark:text-white">
       <div class="relative flex items-start w-full">
