--- a/src/app/Ui/Modules/reportes/components/stats-reporte/stats-reporte.component.html
+++ b/src/app/Ui/Modules/reportes/components/stats-reporte/stats-reporte.component.html
@@ -1,15 +1,19 @@
-<div class=" mx-auto">
-  <div class="grid sm:grid-cols-1 border-y border-gray-200">
+<h1 class="w-full flex flex-col">
+  <span>CONTEOS</span>
+</h1>
+<div class="ml-4 mr-4 mt-4">
+
+  <div class="grid sm:grid-cols-1  gap-3 ">
 
 
     <div
-      class="w-full p-1 md:p-1 relative before:absolute before:top-0 before:start-0 before:w-full before:h-px sm:before:w-px sm:before:h-full before:bg-gray-200 before:first:bg-transparent"
+      class="w-full rounded-2xl bg-[#0158DD] shadow-md  p-1 md:p-1 relative before:absolute before:top-0 before:start-0 before:w-full before:h-px sm:before:w-px sm:before:h-full before:bg-gray-200 before:first:bg-transparent"
     >
       <div>
         <div class="mt-3">
           <div class="flex items-center gap-x-2">
             <p
-              class="text-xs text-center uppercase tracking-wide text-gray-500"
+              class="text-xs text-center uppercase tracking-wide text-gray-100"
             >
               Conteos exactos
             </p>
@@ -18,7 +22,7 @@
             class="mt-1 lg:flex lg:justify-between lg:items-center"
           >
             <h3
-              class="w-full text-xl text-center sm:text-2xl font-semibold text-gray-800"
+              class="w-full text-xl text-center sm:text-2xl font-semibold text-gray-100"
             >
               {{ceros}}
             </h3>
@@ -28,13 +32,13 @@
     </div>
 
     <div
-      class="w-full p-1 md:p-1 relative before:absolute before:top-0 before:start-0 before:w-full before:h-px sm:before:w-px sm:before:h-full before:bg-gray-200 before:first:bg-transparent"
+      class="w-full rounded-2xl bg-[#00D1AE] shadow-md p-1 md:p-1 relative before:absolute before:top-0 before:start-0 before:w-full before:h-px sm:before:w-px sm:before:h-full before:bg-gray-200 before:first:bg-transparent"
     >
       <div>
         <div class="mt-3">
           <div class="flex items-center gap-x-2">
             <p
-              class="text-xs text-center uppercase tracking-wide text-gray-500"
+              class="text-xs text-center uppercase tracking-wide text-gray-100"
             >
               Conteos sobrantes
             </p>
@@ -43,7 +47,7 @@
             class="mt-1 lg:flex lg:justify-between lg:items-center"
           >
             <h3
-              class="w-full text-xl text-center sm:text-2xl font-semibold text-gray-800"
+              class="w-full text-xl text-center sm:text-2xl font-semibold text-gray-100"
             >
               {{positivos}}
             </h3>
@@ -53,13 +57,13 @@
     </div>
 
     <div
-      class="w-full p-1 md:p-1 relative before:absolute before:top-0 before:start-0 before:w-full before:h-px sm:before:w-px sm:before:h-full before:bg-gray-200 before:first:bg-transparent"
+      class="w-full rounded-2xl bg-[#20477E] shadow-md p-1 md:p-1 relative before:absolute before:top-0 before:start-0 before:w-full before:h-px sm:before:w-px sm:before:h-full before:bg-gray-200 before:first:bg-transparent"
     >
       <div>
         <div class="mt-3">
           <div class="flex items-center gap-x-2">
             <p
-              class="text-xs text-center uppercase tracking-wide text-gray-500"
+              class="text-xs text-center uppercase tracking-wide text-gray-100"
             >
               Conteos faltantes
             </p>
@@ -68,7 +72,7 @@
             class="mt-1 lg:flex lg:justify-between lg:items-center"
           >
             <h3
-              class="w-full text-xl text-center sm:text-2xl font-semibold text-gray-800"
+              class="w-full text-xl text-center sm:text-2xl font-semibold text-gray-100"
             >
               {{negativos}}
             </h3>
