18_02_2025 SOMBRAS AGREGADAS REPORTE

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
@@ -66,6 +66,8 @@
 
 
 .apartado-stats {
+  background-color: white;
   display: flex;
   flex-direction: column;
+  box-shadow: 5px 0 10px rgba(0, 0, 0, 0.15);
 }
