18_02_2025 MEJORA DE DISEO APARTADO REPORTE > DETALLE

--- a/src/app/Ui/Modules/reportes/components/filtros-checkbox-tabla/filtros-checkbox-tabla.component.html
+++ b/src/app/Ui/Modules/reportes/components/filtros-checkbox-tabla/filtros-checkbox-tabla.component.html
@@ -1,41 +1,44 @@
-<h1 class="w-full flex flex-col">
-  <span>FILTROS COLUMNA</span>
-</h1>
-<ul class="w-full p-2 flex flex-col">
-  <li  class="inline-flex items-center gap-x-2 py-2 px-4 text-sm font-medium bg-white border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg dark:bg-neutral-800 dark:border-neutral-700 dark:text-white">
-    <div class="relative flex items-start w-full">
-      <div class="flex items-center h-5">
-        <input
-        [checked]="todasSeleccionadas"
-        (change)="toggleTodasLasColumnas()"
-        id="principal"
-        name="columna-checkbox"
-        type="checkbox"
-        class="border-gray-200 rounded disabled:opacity-50 dark:bg-neutral-800 dark:border-neutral-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800"
-      />
-      </div>
-      <label for="principal" class="ms-3.5 block w-full text-sm text-gray-600 dark:text-neutral-500">
-        Todos
-      </label>
-    </div>
-  </li>
-  @for ( columna of columnas; track $index) {
-    <li  class="inline-flex items-center gap-x-2 py-2 px-4 text-sm font-medium bg-white border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg dark:bg-neutral-800 dark:border-neutral-700 dark:text-white">
-      <div class="relative flex items-start w-full">
-        <div class="flex items-center h-5">
+<div class="bg-fondo">
+  <h1 class="w-full flex flex-col ">
+    <span class="text-white">FILTROS COLUMNA</span>
+  </h1>
+  <ul class="w-full p-2 flex flex-col">
+    <li  class="flex items-center justify-start gap-x-3.5 py-1.5 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-800">
+      <div class="relative flex items-center w-full">
+        <div class="flex items-center justify-center h-5">
           <input
-          [checked]="columna.visible"
-          (change)="toggleColumna(columna.id, $event)"
-          [id]="columna.id"
+          [checked]="todasSeleccionadas"
+          (change)="toggleTodasLasColumnas()"
+          id="principal"
           name="columna-checkbox"
           type="checkbox"
-          class="border-gray-200 rounded disabled:opacity-50 dark:bg-neutral-800 dark:border-neutral-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800"
+          class="border-gray-200 rounded disabled:opacity-50 dark:bg-neutral-800 dark:border-neutral-700 dark:checked:bg-blue-500 dark:checked:bg-blue-500 dark:focus:ring-offset-gray-800"
         />
         </div>
-        <label [for]="columna.id" class="ms-3.5 block w-full text-sm text-gray-600 dark:text-neutral-500">
-          {{ columna.titulo }}
+        <label for="principal" class="flex items-center justify-center gap-x-3.5 py-1.5 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-800">
+          Todos
         </label>
       </div>
     </li>
-  }
-</ul>
+    @for ( columna of columnas; track $index) {
+      <li  class="flex items-center justify-start gap-x-3.5 py-1.5 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-800">
+        <div class="relative flex items-center w-full">
+          <div class="flex items-center justify-center  h-5">
+            <input
+            [checked]="columna.visible"
+            (change)="toggleColumna(columna.id, $event)"
+            [id]="columna.id"
+            name="columna-checkbox"
+            type="checkbox"
+            class="border-gray-200 rounded disabled:opacity-50 dark:bg-neutral-800 dark:border-neutral-700 dark:checked:bg-blue-500 dark:checked:border-bg-blue-500 dark:focus:ring-offset-gray-800"
+          />
+          </div>
+          <label [for]="columna.id" class="flex items-center justify-center gap-x-3.5 py-1.5 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-800">
+            {{ columna.titulo }}
+          </label>
+        </div>
+      </li>
+    }
+  </ul>
+</div>
+
