--- a/src/app/Ui/Modules/reportes/components/filtros-checkbox-tabla/filtros-checkbox-tabla.component.css
+++ b/src/app/Ui/Modules/reportes/components/filtros-checkbox-tabla/filtros-checkbox-tabla.component.css
@@ -6,6 +6,7 @@ h1 {
 }
 
 .bg-fondo {
+  height: 100%;
   background: url('../../../../../../assets/images/bg_fondo.webp');
   background-repeat: no-repeat;
   background-size: cover;
