--- a/src/app/Ui/Modules/Dashboard/Page/dashboard-inicio/dashboard-inicio.component.html
+++ b/src/app/Ui/Modules/Dashboard/Page/dashboard-inicio/dashboard-inicio.component.html
@@ -1,5 +1,4 @@
 <app-header-dashboard />
+<dashboard-inicial />
 <section-stats />
-<section-opciones />
-<section-cantidadregistro-inventarios />
 <footer-general />
