--- a/src/app/Ui/Modules/Dashboard/Components/section-cantidadregistro-inventarios/section-cantidadregistro-inventarios.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-cantidadregistro-inventarios/section-cantidadregistro-inventarios.component.html
@@ -1,17 +1,9 @@
-<div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
-  <h2>DIAGR<span>AMAS</span> </h2>
-  <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-4 sm:gap-6">
+<div class="w-full  mx-auto">
+  <div class="grid sm:grid-cols-1 lg:grid-cols-1 gap-4 sm:gap-6">
     <div class="flex flex-col bg-white border shadow-sm rounded-xl">
       <div class="p-4 w-full md:p-5 ">
         <canvas class="w-full" #barChart_inventario></canvas>
       </div>
     </div>
-
-    <div class="flex flex-col bg-white border shadow-sm rounded-xl">
-      <div class="p-4 md:p-5 ">
-        <canvas class="w-full" #barChart_usuario></canvas>
-      </div>
-    </div>
-
   </div>
 </div>
