--- a/src/app/Ui/Shared/Components/organisms/targets/target-opcion/target-opcion.component.css
+++ b/src/app/Ui/Shared/Components/organisms/targets/target-opcion/target-opcion.component.css
@@ -23,7 +23,7 @@
 }
 
 .item_container  p {
-  color: var(--color-principal-1);
+  color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   margin: 0;
