--- a/src/app/Ui/Modules/Dashboard/Components/dashboard-inicial/dashboard-inicial.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/dashboard-inicial/dashboard-inicial.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="container_muestra_datos_generales">
-      <h3>DESCRIPCIONES</h3>
+      <h3>DATOS USUARIOS</h3>
       <ul>
         <li>
           <div class="container-icon">
@@ -28,6 +28,10 @@
           </div>
           <p>Usuario con más inventarios <span>Edwin Alexander Seclen Yupanqui</span></p>
         </li>
+      </ul>
+      <br>
+      <h3>DATOS INVENTARIOS</h3>
+      <ul>
         <li>
           <div class="container-icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="arrow-circle-right"><path fill="#fff" d="M15.71,12.71a1,1,0,0,0,.21-.33,1,1,0,0,0,0-.76,1,1,0,0,0-.21-.33l-3-3a1,1,0,0,0-1.42,1.42L12.59,11H9a1,1,0,0,0,0,2h3.59l-1.3,1.29a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0ZM22,12A10,10,0,1,0,12,22,10,10,0,0,0,22,12ZM4,12a8,8,0,1,1,8,8A8,8,0,0,1,4,12Z"></path></svg>
