--- a/src/app/Ui/Modules/Dashboard/Components/diagrama-ondas-dashboard/diagrama-ondas-dashboard.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/diagrama-ondas-dashboard/diagrama-ondas-dashboard.component.html
@@ -1,5 +1,5 @@
-<div class="altura mx-auto bg-white border rounded-xl">
-    <div class="p-4 w-full ">
+<div class="altura mx-auto bg-transparent border rounded-xl">
+    <div class="p-4 w-full bg-transparent">
       <canvas  #lineChartInventario></canvas>
     </div>
 </div>
