--- a/src/app/Ui/Modules/Dashboard/Components/dashboard-inicial/dashboard-inicial.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/dashboard-inicial/dashboard-inicial.component.html
@@ -64,11 +64,11 @@
       <diagrama-ondas-dashboard  />
     </div>
     <div class="container_graficos_secudarios flex h-[auto] gap-3">
-      <div class="container_grafico_codigobarras  w-[35rem]">
-        <section-cantidadregistro-inventarios class="" />
+      <div class="container_grafico_codigobarras">
+        <section-cantidadregistro-inventarios class="altura" />
       </div>
       <div class="container_grafico_circular ">
-        <!-- grafico circular -->
+        <diagrama-circular-dashboard />
       </div>
     </div>
   </div>
