--- a/src/app/Ui/Modules/Dashboard/Components/section-cantidadregistro-inventarios/section-cantidadregistro-inventarios.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-cantidadregistro-inventarios/section-cantidadregistro-inventarios.component.html
@@ -1,8 +1,9 @@
-<div class="w-full  mx-auto">
-  <div class="grid sm:grid-cols-1 lg:grid-cols-1 gap-4 sm:gap-6">
-    <div class="flex flex-col bg-white border shadow-sm rounded-xl">
-      <div class="p-4 w-full md:p-5 ">
-        <canvas class="w-full" #barChart_inventario></canvas>
+<div class="altura w-full  mx-auto">
+  <div class="altura grid sm:grid-cols-1 lg:grid-cols-1 gap-4 sm:gap-6">
+    <div class="altura flex flex-col bg-white border shadow-sm rounded-xl">
+      <div class="altura p-4 w-full md:p-5 ">
+        <h1 class="title-grafico">GRÁFICO <span>BARRAS</span> </h1>
+        <canvas class="altura w-full" #barChart_inventario></canvas>
       </div>
     </div>
   </div>
