18_02_2025 BUSQUEDA POR RUC

--- a/src/app/Ui/Modules/Dashboard/Components/section-stats/section-stats.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-stats/section-stats.component.html
@@ -12,7 +12,7 @@
     <!-- End Stats -->
 
     <!-- Stats -->
-    <div class="bg-white rounded-2x p-4 box-border">
+    <div class="bg-white rounded-2xl p-4 box-border">
       <h4 class="text-lg sm:text-xl font-semibold text-[#00D1AE]">Total inventarios</h4>
       <p class="mt-2 sm:mt-3 text-4xl sm:text-6xl font-bold text-[#00D1AE]">{{datosInventarioslista}}</p>
       <p class="mt-1 text-gray-500">Registrados para trabajarse</p>
@@ -20,7 +20,7 @@
     <!-- End Stats -->
 
     <!-- Stats -->
-    <div class="bg-white rounded-2x p-4 box-border">
+    <div class="bg-white rounded-2xl p-4 box-border">
       <h4 class="text-lg sm:text-xl font-semibold text-[#20477E]">Total inventarios asignados</h4>
       <p class="mt-2 sm:mt-3 text-4xl sm:text-6xl font-bold text-[#20477E]">{{datosInventariosAsignados}}</p>
       <p class="mt-1 text-gray-500">Asignados a un usuario en específico</p>
