20_02_2025 ADD LISTA DE SUCURSALES Y DETALLE DE LA EMPRESA

--- a/src/app/Ui/Modules/Dashboard/Components/section-cantidadregistro-inventarios/section-cantidadregistro-inventarios.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-cantidadregistro-inventarios/section-cantidadregistro-inventarios.component.html
@@ -2,7 +2,7 @@
   <div class="altura flex-1 bg-white border shadow-sm rounded-xl">
     <div class=" p-4 w-full md:p-5 ">
       <h1 class="title-grafico">GRÁFICO <span>BARRAS</span> </h1>
-      <canvas class=" w-full" #barChart_inventario></canvas>
+      <canvas #barChart_inventario></canvas>
     </div>
   </div>
 </div>
