--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -1,97 +1,73 @@
 <header-table />
 
-<table class="min-w-full divide-y divide-gray-200">
-  <thead class="bg-gray-50">
-    <tr>
-      <th scope="col" class="px-6 py-3 text-start">
-        <header-table-title [title]="'rucempresa'" />
-      </th>
-
-      <th scope="col" class="px-6 py-3 text-start">
-        <header-table-title [title]="'razonsocial'" />
-      </th>
-
-      <th scope="col" class="px-6 py-3 text-start">
-        <header-table-title [title]="'estado'" />
-      </th>
-
-      <!-- <th scope="col" class="px-6 py-3 text-end"></th> -->
-    </tr>
-  </thead>
-
-  <tbody class="divide-y divide-gray-200">
-    @for (item of DatosEmpresas | paginate: { itemsPerPage: itemsPerPage,
-    currentPage: p }; track $index) {
-    <tr class="bg-white hover:bg-gray-50">
-      <td class="size-px whitespace-nowrap">
-        <body-table-button [text]="item.rucempresa" />
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="rucempresa">
+      <th mat-header-cell *matHeaderCellDef class="mat-primary">RUC</th>
+      <td class="rol" mat-cell *matCellDef="let element">
+        <div class="container-data">
+          {{ element.rucempresa || '-' }}
+        </div>
       </td>
-      <td class="size-px whitespace-nowrap">
-        <body-table-button [text]="item.razonsocial" />
+    </ng-container>
+
+    <ng-container matColumnDef="razonsocial">
+      <th mat-header-cell *matHeaderCellDef class="mat-primary">
+        Razon Social
+      </th>
+      <td class="rol" mat-cell *matCellDef="let element">
+        <div class="container-data">
+          {{ element.razonsocial || '-'}}
+        </div>
       </td>
-      <td class="size-px whitespace-nowrap">
+    </ng-container>
+
+    <ng-container matColumnDef="Estado">
+      <th mat-header-cell *matHeaderCellDef class="mat-accent">Estado</th>
+      <td mat-cell *matCellDef="let element">
         <button
           type="button"
           class="block"
           aria-haspopup="dialog"
           aria-expanded="false"
         >
-          @if (item.estado == "1") {
+          @if (element.estado == "1") {
           <body-table-estado-activo />
           }@else {
           <body-table-estado-inactivo />
           }
         </button>
       </td>
-      <!-- <td class="size-px whitespace-nowrap">
-          <body-table-button-icon [text]="'Detalle'" />
-        </td> -->
-    </tr>
-    }
-  </tbody>
-</table>
+    </ng-container>
 
-@if (DatosEmpresas.length == 0) {
-<message-empty-list />
-}
-
-<div
-  class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200"
->
-  <div>
-    <p class="text-sm text-gray-600">
-      <span class="font-semibold text-gray-800">{{
-        DatosEmpresas.length
-      }}</span>
-      Datos totales
-    </p>
-  </div>
-
-  <div>
-    <div class="inline-flex gap-x-2">
-      <div class="input-group mb-2">
-        <div class="dropdown mr-4">
-          <select
-            class="form-select"
-            (change)="onItemsPerPageChange($event)"
-            aria-label="Default select example"
+    <ng-container matColumnDef="opciones">
+      <th mat-header-cell *matHeaderCellDef class="mat-accent"></th>
+      <td mat-cell *matCellDef="let element">
+        <div class="px-6 py-3 flex gap-2">
+          <button
+          (click)="DetalleEmpresas(element.rucempresa)"
+          data-bs-toggle="offcanvas" data-bs-target="#detalleEmpresa" aria-controls="detalleEmpresa"
+           class="btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
+            type="button"
           >
-            <option value="" disabled selected>Ítems</option>
-            <option value="5">5</option>
-            <option selected value="10">10</option>
-            <option value="15">15</option>
-            <option value="20">20</option>
-          </select>
+          <mat-icon>visibility</mat-icon>
+          </button>
         </div>
-        <div class="flex items-center justify-center">
-          <pagination-controls (pageChange)="p = $event"></pagination-controls>
-        </div>
-      </div>
-    </div>
-  </div>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
 </div>
 
-<footer-general />
+  <footer-general />
+  <detalle-empresa-page [detalleEmpresa]="detalleEmpresa" [listaSucursales]="sucursales" />
+  <detalle-empresa />
+  <registro-empresa />
 
-<detalle-empresa />
-<registro-empresa />
