21_02_2025 DISENIO TABLA CARGA INVENTARIO ADD CAMPOS

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.css
@@ -29,7 +29,6 @@ table th {
 
 .empresa-view .container-rucempresa {
   width: 100%;
-  text-align: left;
   border-radius: 20px;
   text-align: center;
   font-size: .8rem;
@@ -67,4 +66,25 @@ table th {
 .buttons-options td {
   display: grid;
   place-content: center;
+}
+
+.cantidadtotal {
+  display: flex;
+  align-items: center;
+  min-width: 3rem;
+  background-color: rgba(113, 151, 204, 1);
+  border-radius: 50px;
+}
+
+.cantidadtotal span{
+  font-size: 1rem;
+  color: white;
+}
+
+.usuarioasignado mat-icon {
+  color: #0158DD;
+}
+
+.fecharegistro mat-icon {
+  color: #01ad91;
 }
