--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -7,13 +7,15 @@
     <mat-select [(value)]="selectedEmpresa" (selectionChange)="emitirFiltros()">
       <mat-option value="">Todas</mat-option>
       @for (item of DatosEmpresas; track $index) {
-        <mat-option [value]="item.rucempresa">
-          <mat-list-item>
-            <!-- <div  matListItemTitle>{{ item.rucempresa || 'Sin RUC' }}</div> -->
-            <div matListItemLine> <span>{{ item.rucempresa || 'Sin RUC' }}</span> - {{ item.razonsocial || 'Sin razón social' }}</div>
-          </mat-list-item>
-        </mat-option>
-        <hr>
+      <mat-option [value]="item.rucempresa">
+        <mat-list-item>
+          <div matListItemLine>
+            <span>{{ item.rucempresa || "Sin RUC" }}</span> -
+            {{ item.razonsocial || "Sin razón social" }}
+          </div>
+        </mat-list-item>
+      </mat-option>
+      <hr />
       }
     </mat-select>
   </mat-form-field>
@@ -22,7 +24,7 @@
     <mat-label>Filtro Estados</mat-label>
     <mat-select [(value)]="selected" (selectionChange)="emitirFiltros()">
       @for (item of filtroEstados; track $index) {
-        <mat-option [value]="item.value">{{ item.viewValue }}</mat-option>
+      <mat-option [value]="item.value">{{ item.viewValue }}</mat-option>
       }
     </mat-select>
   </mat-form-field>
@@ -38,7 +40,6 @@
   </mat-form-field>
 </div>
 
-
 <table mat-table [dataSource]="dataSource" matSort>
   <!-- =================================================================================== -->
   <!-- Descripción -->
@@ -49,12 +50,25 @@
       <button class="px-6 py-3 flex gap-2 align-center">
         <img src="../../../../../../assets/svg/icon_excel.svg" alt="" />
         <span class="text-sm text-gray-600 dark:text-neutral-400">
-          {{ row.descripcion.toUpperCase() || '- sin nombre -'}}
+          {{ row.descripcion.toUpperCase() || "- sin nombre -" }}
         </span>
       </button>
     </td>
   </ng-container>
 
+   <!-- =================================================================================== -->
+  <!-- Cantidad datos inventario-->
+  <!-- =================================================================================== -->
+  <ng-container matColumnDef="cantidad">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Cantidad ítems</th>
+    <td mat-cell *matCellDef="let row">
+      <button  class="cantidadtotal px-3 py-1 flex gap-2 align-center">
+        <span class="text-sm text-gray-600 dark:text-neutral-400">
+          {{ row.totalregistros || "-" }}
+        </span>
+      </button>
+    </td>
+  </ng-container>
 
   <!-- =================================================================================== -->
   <!-- Usuario asignado-->
@@ -62,7 +76,7 @@
   <ng-container matColumnDef="usuarioasignado">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuario asignado</th>
     <td mat-cell *matCellDef="let row">
-      <button class="usuariocreador" class="px-6 py-3 flex gap-2 align-center">
+      <button class="usuarioasignado px-1 py-3 flex gap-2 align-center">
         <mat-icon>person</mat-icon>
         <span class="text-sm text-gray-600 dark:text-neutral-400">
           {{ row.UsuarioAsignado || "-" }}
@@ -72,11 +86,26 @@
   </ng-container>
 
   <!-- =================================================================================== -->
+  <!-- Fecha registro-->
+  <!-- =================================================================================== -->
+  <ng-container matColumnDef="fecharegistro">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha registro</th>
+    <td mat-cell *matCellDef="let row">
+      <button class="fecharegistro px-1 py-3 flex gap-2 align-center">
+        <mat-icon>event</mat-icon>
+        <span class="text-sm text-gray-600 dark:text-neutral-400">
+          {{ row.fechacreacion || "-"  | date:'dd/MM/yyyy'}}
+        </span>
+      </button>
+    </td>
+  </ng-container>
+
+  <!-- =================================================================================== -->
   <!-- Estado -->
   <!-- =================================================================================== -->
   <ng-container matColumnDef="estado">
-    <th  mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
-    <td  mat-cell *matCellDef="let row">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
+    <td mat-cell *matCellDef="let row">
       @if (row.estado == "1") {
       <td-estado-1 />
       } @if (row.estado == "2") {
@@ -88,57 +117,40 @@
   </ng-container>
 
   <!-- =================================================================================== -->
-  <!-- Detalle -->
+  <!-- Anular -->
   <!-- =================================================================================== -->
-  <ng-container  matColumnDef="detalle">
-    <th  mat-header-cell *matHeaderCellDef mat-sort-header>Detalle</th>
-    <td  mat-cell *matCellDef="let row">
-      <td-table-btn-detalle
+  <ng-container class="buttons" matColumnDef="operaciones">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Operaciones</th>
+    <td mat-cell *matCellDef="let row">
+      <div class="flex">
+        <td-table-btn-detalle
         [idcarga]="row.idcarga"
         [rucempresa]="row.rucempresa"
         (obtenerDetalle)="
           ObtenerDetalleInventarios($event.rucempresa, $event.idcarga)
         "
       />
-    </td>
-  </ng-container>
-
-   <!-- =================================================================================== -->
-  <!-- Asignar -->
-  <!-- =================================================================================== -->
-  <ng-container  matColumnDef="asignar">
-    <th  mat-header-cell *matHeaderCellDef mat-sort-header>Asignar</th>
-    <td  mat-cell *matCellDef="let row">
-      @if (row.estado == '0') { - } @if (row.estado == '2')
-          { - } @if (row.estado == '1') {
-          <button-asignar
-            [idcarga]="row.idcarga"
-            [rucempresa]="row.rucempresa"
-            (obtenerDetalle)="
-              ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)
-            "
-          />
-          }
-    </td>
-  </ng-container>
-
-   <!-- =================================================================================== -->
-  <!-- Anular -->
-  <!-- =================================================================================== -->
-  <ng-container class="buttons" matColumnDef="anular">
-    <th  mat-header-cell *matHeaderCellDef mat-sort-header>Anular</th>
-    <td  mat-cell *matCellDef="let row">
-      @if (row.estado == '0') { - } @if (row.estado == '2')
-          { - } @if (row.estado == '1') {
-            <button-anular-inventario
-            [idcarga]="row.idcarga"
-            [rucempresa]="row.rucempresa"
-            (obtenerDetalle)="
-              ObtenerDatosAnularInventario($event.rucempresa, $event.idcarga)
-            "
-            [datosInventario]="datosInventario"
-          />
-          }
+        @if (row.estado == '0') { - } @if (row.estado == '2') { - } @if
+        (row.estado == '1') {
+        <button-asignar
+          [idcarga]="row.idcarga"
+          [rucempresa]="row.rucempresa"
+          (obtenerDetalle)="
+            ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)
+          "
+        />
+        } @if (row.estado == '0') { - } @if (row.estado == '2') { - } @if
+        (row.estado == '1') {
+        <button-anular-inventario
+          [idcarga]="row.idcarga"
+          [rucempresa]="row.rucempresa"
+          (obtenerDetalle)="
+            ObtenerDatosAnularInventario($event.rucempresa, $event.idcarga)
+          "
+          [datosInventario]="datosInventario"
+        />
+        }
+      </div>
     </td>
   </ng-container>
 
