--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 100%;
 }
-
+/*
 .container-formulario .container-formulario_izquierdo {
   height: 20rem;
   background: linear-gradient(to bottom, #0158DD, #20477E);
@@ -33,25 +33,21 @@
   height: 2rem;
   background-color: #F0F0F0;
   margin-top: 1rem;
-}
-
-.container-formulario_derecho {
-  padding: 2rem 4rem ;
-}
+} */
 
 
-.container-formulario_derecho form select {
+ form select {
   height: 3.5rem;
   background-color: #f7f7f7;
   border: none;
 }
 
-.container-formulario_derecho form label {
+ form label {
   margin-top: 1rem;
   color: #0158DD;
 }
 
-.container-formulario_derecho form .containar_ver_detalle {
+ form .containar_ver_detalle {
   height: 3.5rem;
   background-color: transparent;
   padding: 0 1rem;
@@ -61,18 +57,18 @@
   justify-content: space-between;
 }
 
-.container-formulario_derecho form .containar_ver_detalle h4 {
+ form .containar_ver_detalle h4 {
   color: var(--color-principal-1);
   font-weight: 700;
   font-size: .9rem;
 }
 
-.container-formulario_derecho form .containar_ver_detalle h4 span {
+ form .containar_ver_detalle h4 span {
   color: var(--color-principal-5);
   font-weight: 700;
 }
 
-.container-formulario_derecho form .Nombre_Inventario input {
+ form .Nombre_Inventario input {
   height: 3.5rem;
   background-color: #f7f7f7;
 }
