22_02_2025 ALTER MATCH DE CAMPOS CARGA INVENTARIO

--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -215,3 +215,8 @@
 </div>
 
 <preview-carga-inventarios [excelData]="excelData" />
+<column-matcher
+  [columnasEsperadas]="columnasEsperadas"
+  [columnasExcel]="columnasExcel"
+  (columnasMapeadas)="guardarColumnasMapeadas($event)"
+/>
