--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.css
@@ -192,6 +192,13 @@ mat-form-field {
 }
 
 
+/* DISEÑO SWET ALERT LUEGO DEL GUARDAR */
+.swal2-input {
+  height: 3.5rem;
+  background-color: #f7f7f7;
+  border: none;
+}
+
 @media (max-width: 480px) {
   .container_seleccion_archivo {
     height: 50vh;
